# Teaching-Tools

./: CMakeLists.txt  package-lock.json  package.json  tsconfig.json  webpack.main.config.js
cppBackEnd/: CMakeLists.txt  test.cpp  tests.cpp
cppBackEnd/Tools/: CMakeLists.txt  InputOption.h
cppBackEnd/Tools/Element/: CMakeLists.txt  element.cpp  element.h  sentence.cpp  sentence.h
cppBackEnd/header/: CMakeLists.txt  InputOption.h  ProcessMode.h  element.h  sentence.h  transform.h  word.h
cppBackEnd/src/: CMakeLists.txt  element.cpp  main.cpp  sentence.cpp  transform.cpp  word.cpp
ref/: handling.js  style.css  teachingUI.html
src/: index.css  index.html  main.js  preload.js  renderer.js
